--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.12.0
+  device_info: 0.4.0+2
+  common_utils: ^1.1.1
+  pull_to_refresh: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
