--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   device_info: 0.4.0+2
   common_utils: ^1.1.1
   pull_to_refresh: ^2.0.0
+  flutter_swiper: ^1.1.6
+  flutter_webview_plugin: ^0.3.4
+  fluttertoast: ^8.0.8
 
 
 dev_dependencies:
@@ -49,6 +52,7 @@ flutter:
   uses-material-design: true
   assets:
    - assets/city.json
+   - assets/images/
   # To add assets to your application, add an assets section, like this:
 
   #   - images/a_dot_ham.jpeg
@@ -78,3 +82,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
+
+
+
